@@ -1,5 +1,3 @@
-.\" $Id$
-.\"
 .TH lxterm 1 "2004-12-19" "Debian Project"
 .SH NAME
 lxterm \- locale\-sensitive wrapper for xterm
