@@ -1,5 +1,3 @@
-# $Id$
-
 ?package(xterm):\
  needs="x11"\
  section="Applications/Terminal Emulators"\
